k8s_manifests/gateway/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
  labels:
    team: devops
    environment: production
    gateway-access: "enabled"

    # helm label for namespace management
    kubernetes.io/metadata.name: nginx-gateway
