k8s_manifests/gateway/nginx/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapp-route
  namespace: frontend
spec:
  parentRefs:
  - name: prod-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "todo.imon.work"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webapp-service
      port: 80
